--- a/focus-android/app/build.gradle
+++ b/focus-android/app/build.gradle
@@ -37,6 +37,8 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
+    // This shouldn't be needed anymore with AGP 8.1.0+
+    // https://kotlinlang.org/docs/gradle-configure-project.html#gradle-java-toolchains-support
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -167,12 +169,15 @@ android {
     namespace 'org.mozilla.focus'
 }
 
+kotlin {
+    jvmToolchain(17)
+}
+
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
             allWarningsAsErrors = true
             freeCompilerArgs += "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
             freeCompilerArgs += "-Xjvm-default=all"
-            jvmTarget = '11'
         }
 }
 
